<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <!-- For Website-->
    <EditText
        android:id="@+id/website_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_url"
        />
    <Button
        android:id="@+id/website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_url"
        android:layout_marginBottom="24dp"
        android:onClick="openWebsite"
        />

    <!--For Location-->
    <EditText
        android:id="@+id/location_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_location"
        />
    <Button
        android:id="@+id/location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_location"
        android:layout_marginBottom="24dp"
        android:onClick="openLocation"
        />

    <!--For Share-->
    <EditText
        android:id="@+id/website_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_share"
        />
    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_share"
        android:layout_marginBottom="24dp"
        android:onClick="openShare"
        />

</LinearLayout>